# smart-waste-management-system

./: .deepsource.toml  .gitignore  README.md
HC-SR04/: README.md  main.py  referencias.txt
HC-SR04/project-test-sensor/: CMakeLists.txt
container/devices/hc-sr04/: main.py  requirements.txt
container/devices/hc-sr04/project-test-sensor/main/: main.c
container/pi-container/: .gitignore  CMakeLists.txt  README.md  core.h  loader.ps1  main.cpp  main.h  test.txt  types.h  ultra_sonic.h
controller-container/esp-controller/: CMakeLists.txt
controller-container/esp-controller/main/: main.cpp
database-deployment/: containers.sql
database-deployment/mariadb/: docker-compose.yml
server-app/: .gitignore  README.md  app.go  env.ps1  env.sh  go.mod  run.ps1  run.sh
server-app/internal/handlers/: devices.go  index.go  types.go
server-app/internal/handlers/devices/: esp32.go  pi-pico.go
server-app/internal/models/: container.go  controller-c.go
server-app/internal/routes/: main.go
server-app/pkg/: db.go  tools.go
server-app/pkg/env/: main.go
server-app/types/: handlers.go  main.go
web-app/: index.html  package-lock.json  package.json
web-app-design/: README.md
web-app/src/: App.tsx  app.css
web-app/src/components/Layout/: index.tsx
web-app/src/components/navBar/: index.tsx  styles.css
web-app/src/components/ui/Avatar/: index.tsx  styles.css
web-app/src/components/ui/Device/: index.tsx  styles.css  types.ts
web-app/src/components/ui/MapView/: index.tsx  (+1 more)
web-app/src/icons/: delete.tsx  home.tsx  navigation.tsx  settings.tsx  styles.css
(+2 files in other folders)
